# maniple

./: .gitignore  .mcp.json  CHANGELOG.md  CLAUDE.md  FORK.md  HAPPY_INTEGRATION_RESEARCH.md  INSTALL.md  NOTES.md  README.md  SMART_FORK_PROPOSAL.md  claude_controller.py  orchestrator.py  primitives.py  pyproject.toml  session_parser.py  test_controller.py  test_split.py
.beads/: beads.db  beads.db-shm  deletions.jsonl  issues.jsonl  last-touched  sync-state.json
.claude/: settings.json
.claude-plugin/: marketplace.json  plugin.json
.githooks/: pre-push
.pebbles/: events.jsonl
commands/: check-workers.md  cleanup-worktrees.md  merge-worker.md  pr-worker.md  spawn-workers.md  team-summary.md
docs/: ISSUE_TRACKER_ABSTRACTION.md  README.md  REMOVE_ISSUE_TRACKER_SPEC.md  bead-to-issue-rename-investigation.md  coordinator-annotation.md  coordinator-badge.md  rename-decisions.md  rename-status.md  task-delivery-quick-reference.md
examples/: com.claude-team.plist  com.maniple.plist
plans/: DEV-39-iterm-python-api-tmux-cc.md
scripts/: check-upstream.sh  claude-maniple-switch  install-launchd.sh  team-status.sh  uninstall-launchd.sh
tests/: __init__.py  conftest.py  test_claude_export.py  test_cli_backends.py  test_codex_export.py  test_codex_jsonl_path.py  test_codex_schema.py  test_colors.py  test_config.py  test_config_cli.py  test_events.py  test_formatting.py  test_idle_detection.py  test_idle_detection_module.py  test_issue_tracker.py  test_issue_tracker_integration.py  test_iterm_utils.py  test_names.py  test_paths.py  test_poll_worker_changes.py  (+19 more)
(+108 files in other folders)
